--- a/app/src/main/res/layout/question_form.xml
+++ b/app/src/main/res/layout/question_form.xml
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ak je to potrerbné, pridaj k otázke aj obrázky"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/selectImageBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +153,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/selectImageBtn" />
 
     <EditText
         android:id="@+id/editTextQuestionTags"
@@ -168,7 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/selectImageBtn"
         android:layout_width="239dp"
         android:layout_height="46dp"
         android:text="+ Pridať obrázok"
