--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -14,16 +14,48 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/answersCountText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Answers count"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <ImageView
+            android:id="@+id/answersIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toTopOf="@id/answersCountText"
+            app:layout_constraintBottom_toBottomOf="@id/answersCountText"
+            app:layout_constraintStart_toEndOf="@+id/answersCountText"
+            app:srcCompat="@drawable/ic_round_question_answer_24" />
+
+        <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Question title"
             android:textSize="20sp"
             android:layout_marginLeft="20dp"
-            app:layout_constraintStart_toEndOf="@+id/answersCountText"
+            app:layout_constraintStart_toEndOf="@+id/answersIcon"
             app:layout_constraintTop_toTopOf="@+id/answersCountText"
-            app:layout_constraintBaseline_toBaselineOf="@+id/answersCountText"
+            app:layout_constraintBaseline_toBaselineOf="@id/answersCountText"
             android:textStyle="bold"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagsRecyclerView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/titleText"
+            app:layout_constraintStart_toStartOf="@id/titleText"
+            />
 
         <TextView
             android:id="@+id/authorText"
@@ -32,9 +64,10 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:text="Author"
+            app:layout_constraintStart_toStartOf="@+id/tagsRecyclerView"
+            app:layout_constraintTop_toBottomOf="@+id/tagsRecyclerView"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/titleText"
-            app:layout_constraintTop_toBottomOf="@+id/titleText" />
+            />
 
         <TextView
             android:id="@+id/createdAtText"
@@ -44,19 +77,6 @@
             android:layout_marginLeft="25dp"
             app:layout_constraintBottom_toBottomOf="@+id/authorText"
             app:layout_constraintStart_toEndOf="@+id/authorText" />
-
-        <TextView
-            android:id="@+id/answersCountText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:text="Answers count"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
