--- a/app/src/main/res/layout/activity_questions_list.xml
+++ b/app/src/main/res/layout/activity_questions_list.xml
@@ -12,6 +12,8 @@
         android:id="@+id/questionsListRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingHorizontal="15dp"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
