funkcna obrazovka so zoznamom tagov, este treba dorobit detaily - spacingy v recyclerview atd

--- a/app/src/main/res/layout/activity_tags_list.xml
+++ b/app/src/main/res/layout/activity_tags_list.xml
@@ -7,23 +7,30 @@
     android:id="@+id/tagsListRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="25dp"
+    android:paddingTop="25dp"
     tools:context=".views.TagsListActivity">
 
-<!--    <EditText-->
-<!--        android:id="@+id/searchText"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:hint="Zadajte hľadaný výraz"-->
-<!--        android:inputType="text"-->
-<!--        android:singleLine="true"-->
-<!--        android:imeOptions="actionDone" />-->
+    <EditText
+        android:id="@+id/searchText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Zadajte hľadaný výraz"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="text"
+        android:singleLine="true"
+        android:imeOptions="actionDone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagsListRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingVertical="25dp"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@id/searchText"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
