--- a/app/src/main/res/layout/tag_detail_item.xml
+++ b/app/src/main/res/layout/tag_detail_item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tagDetailItemRoot"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="25dp"
+    android:layout_marginBottom="25dp"
     android:orientation="vertical">
     <TextView
         android:id="@+id/tagNameText"
