--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -56,25 +56,25 @@
             />
 
         <TextView
-            android:id="@+id/authorText"
+            android:id="@+id/createdAtText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:text="Author"
+            android:text="Created at"
             app:layout_constraintStart_toStartOf="@+id/tagsRecyclerView"
             app:layout_constraintTop_toBottomOf="@+id/tagsRecyclerView"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
         <TextView
-            android:id="@+id/createdAtText"
+            android:id="@+id/authorText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Created at"
+            android:text="Author"
             android:layout_marginLeft="25dp"
-            app:layout_constraintBottom_toBottomOf="@+id/authorText"
-            app:layout_constraintStart_toEndOf="@+id/authorText" />
+            app:layout_constraintBottom_toBottomOf="@+id/createdAtText"
+            app:layout_constraintStart_toEndOf="@+id/createdAtText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
