--- a/app/src/main/res/layout/user_answers_fragment.xml
+++ b/app/src/main/res/layout/user_answers_fragment.xml
@@ -5,10 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="User answers"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/userAnswersListRecycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="25dp"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
