drobne upravy v momentalne funkcnych obrazovkach

--- a/app/src/main/res/layout/user_info_fragment.xml
+++ b/app/src/main/res/layout/user_info_fragment.xml
@@ -4,9 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+<!--        <variable-->
+<!--            name="viewModel"-->
+<!--            type="com.example.mtaafe.viewmodels.UserInfoViewModel" />-->
         <variable
             name="viewModel"
-            type="com.example.mtaafe.viewmodels.UserInfoViewModel" />
+            type="com.example.mtaafe.viewmodels.UserProfileViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
