--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -2,18 +2,19 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     android:layout_marginLeft="15dp"
     android:layout_marginTop="25dp"
     android:layout_marginRight="15dp"
-    android:layout_marginBottom="25dp"
+    android:layout_marginBottom="0dp"
     card_view:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="25dp">
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:id="@+id/answerBodyText"
@@ -43,11 +44,34 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="4dp"
             android:text="Created at"
             app:layout_constraintStart_toStartOf="@+id/authorText2"
             app:layout_constraintTop_toBottomOf="@+id/authorText2" />
+
+        <Button
+            android:id="@+id/editBtn2"
+            android:layout_width="73dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="24dp"
+            android:text="Upraviť"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/answerBodyText" />
+
+        <Button
+            android:id="@+id/deleteBtn2"
+            android:layout_width="80dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="24dp"
+            android:text="Odstrániť"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@+id/editBtn2"
+            app:layout_constraintTop_toBottomOf="@+id/answerBodyText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
