zobrazovanie obrazkov vo formularoch

--- a/app/src/main/res/layout/answer_form.xml
+++ b/app/src/main/res/layout/answer_form.xml
@@ -7,7 +7,7 @@
     android:id="@+id/answerFormRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="15dp">
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,6 +67,13 @@
             android:paddingVertical="25dp"
             android:layout_marginTop="15dp"
             android:text="+ Pridať obrázok" />
+
+        <ImageView
+            android:id="@+id/answerFormImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            />
 
         <Button
             android:id="@+id/answerBtn"
