--- a/app/src/main/res/layout/question_form.xml
+++ b/app/src/main/res/layout/question_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/questionFormRoot"
@@ -12,16 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:text="Nová otázka"
-            android:textSize="24sp"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView5"
@@ -99,21 +89,21 @@
             android:layout_marginTop="15dp"
             android:text="+ Pridať obrázok" />
 
-        <ImageView
-            android:id="@+id/questionFormImageView"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imagesRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false"
             />
 
         <Button
             android:id="@+id/askButton"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:paddingVertical="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Opýtať sa" />
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
