--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal"
         android:weightSum="10"
         android:gravity="center_horizontal"
-        tools:context=".views.LoginActivity">
+        tools:context=".views.activities.LoginActivity">
 
         <LinearLayout
             android:layout_width="wrap_content"
