--- a/app/src/main/res/layout/activity_tag_questions_list.xml
+++ b/app/src/main/res/layout/activity_tag_questions_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/questionsListRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.TagQuestionsListActivity">
+    tools:context=".views.activities.TagQuestionsListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tagQuestionsListRecycler"
