--- a/app/src/main/res/layout/answer_edit.xml
+++ b/app/src/main/res/layout/answer_edit.xml
@@ -10,19 +10,10 @@
     >
 
     <LinearLayout
+        android:id="@+id/answerEditRoot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView16"
-            android:text="Editovanie odpovede"
-            android:textSize="24sp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView5"
@@ -44,17 +35,24 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/answerBodyEditET"
+            android:id="@+id/answerBodyEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="textPersonName" />
+        <TextView
+            android:id="@+id/bodyErrorMessageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone"
+            android:textColor="@android:color/holo_red_dark" />
 
         <Button
             android:id="@+id/answerEditBtn"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="50dp"
             android:paddingVertical="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
