--- a/app/src/main/res/layout/answer_form.xml
+++ b/app/src/main/res/layout/answer_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,16 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:text="Nová odpoveď"
-            android:textSize="24sp"
-            android:textStyle="bold"  />
 
         <TextView
             android:id="@+id/textView12"
@@ -50,6 +40,13 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="textPersonName" />
+        <TextView
+            android:id="@+id/bodyErrorMessageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone"
+            android:textColor="@android:color/holo_red_dark" />
 
         <TextView
             android:id="@+id/textView14"
@@ -68,11 +65,11 @@
             android:layout_marginTop="15dp"
             android:text="+ Pridať obrázok" />
 
-        <ImageView
-            android:id="@+id/answerFormImageView"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/imagesRecyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false"
             />
 
         <Button
@@ -86,4 +83,4 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
