--- a/app/src/main/res/layout/image_form_item.xml
+++ b/app/src/main/res/layout/image_form_item.xml
@@ -15,4 +15,19 @@
         android:adjustViewBounds="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/closeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_close_24"
+        android:backgroundTint="#C4C4C4"
+        app:fabSize="mini"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
